--- a/dillo/templates/dillo/components/media_embeds/file_video.pug
+++ b/dillo/templates/dillo/components/media_embeds/file_video.pug
@@ -1,5 +1,5 @@
 | {% if is_processing %}
-p Content is processing
+p Content is processing...
 | {% else %}
 video(controls, loop)
   source(src='{{ media.video.url_720p }}', type='video/mp4')
