--- a/static/styles/_comments.sass
+++ b/static/styles/_comments.sass
@@ -286,6 +286,7 @@
     +margin(3, top)
 
 .comments-list-header
-  +padding(3, y)
+  +padding(3, top)
+  +padding(2, bottom)
   font-size: var(--font-size-sm)
   color: var(--text-secondary)
