Comments: Fix padding when editing a comment

--- a/static/styles/_comments.sass
+++ b/static/styles/_comments.sass
@@ -79,6 +79,8 @@
       .comment-header
         +make-disabled
 
+    .comment-form textarea
+      padding-right: 12rem
 
 .comment-avatar
   +margin(2, right)
