--- a/static/styles/_comments.sass
+++ b/static/styles/_comments.sass
@@ -144,6 +144,9 @@
   font-size: var(--font-size-sm)
   line-height: 21px
 
+  ul, ol
+    margin-bottom: var(--spacer)
+
 .comment-actions
   .btn-toolbar-row
     +margin(2, top)
