--- a/static/styles/_comments.sass
+++ b/static/styles/_comments.sass
@@ -173,6 +173,8 @@
   .btn-reply
     margin-left: auto !important
 
+  .btn-like span span
+    font-size: var(--font-size-sm)
 
 .comment-form-container
   padding-top: 0
