Comments: spacing on images

--- a/static/styles/_comments.sass
+++ b/static/styles/_comments.sass
@@ -147,6 +147,9 @@
   ul, ol
     margin-bottom: var(--spacer)
 
+  img
+    +margin(3, y)
+
 .comment-actions
   .btn-toolbar-row
     +margin(2, top)
