Comments: Style Load More button

--- a/static/styles/_comments.sass
+++ b/static/styles/_comments.sass
@@ -308,3 +308,10 @@
   +padding(2, bottom)
   font-size: var(--font-size-sm)
   color: var(--text-secondary)
+
+.comments-more
+  +margin(3, top)
+  display: flex
+
+  button
+    flex: 1
