Refactor profile-detail into own file
This makes it possible to override the endpoint in other applications.
The endpoint was renamed from profile_details to profile-detail to
better follow the url naming convention.

--- a/dillo/templates/dillo/components/_comment_view.pug
+++ b/dillo/templates/dillo/components/_comment_view.pug
@@ -10,7 +10,7 @@
 	.comment-body
 		.comment-header
 			a.comment-author(
-				href="{% url 'profile_details' comment.user.username %}",
+				href="{% url 'profile-detail' comment.user.username %}",
 				title="{{ comment.user.username }}")
 				| {{ comment.user.username }}
 			a.comment-date(
