Add containers for Uppy progress bars

--- a/dillo/templates/dillo/widgets/file_upload.html
+++ b/dillo/templates/dillo/widgets/file_upload.html
@@ -1,2 +1,3 @@
 {% include "django/forms/widgets/input.html" %}
 <div id="downloadable-file-area" class="entity-drop-area"></div>
+<div id="downloadable-file-area-progress"></div>
