--- a/dillo/templates/dillo/widgets/textarea_with_media.html
+++ b/dillo/templates/dillo/widgets/textarea_with_media.html
@@ -2,7 +2,7 @@
 {% if widget.value %}{{ widget.value }}{% endif %}</textarea>
 
 <div id="uppy-drop-area" class="entity-drop-area"></div>
-
+<div id="uppy-drop-area-progress"></div>
 {% verbatim %}
 <div class="entity-media-list">
   <label v-if="media.length">Post Media:</label>
