--- a/dillo/templates/dillo/components/media_embeds/file_video.pug
+++ b/dillo/templates/dillo/components/media_embeds/file_video.pug
@@ -1,6 +1,7 @@
 | {% if is_processing %}
-p Content is processing...
+.media-embed-video-placeholder
+  p Video processing...
 | {% else %}
-video(controls, loop)
+video.media-embed-video(controls, loop)
   source(src='{{ media.video.url_720p }}', type='video/mp4')
 | {% endif %}
