Style entity media list

--- a/dillo/templates/dillo/widgets/textarea_with_media.html
+++ b/dillo/templates/dillo/widgets/textarea_with_media.html
@@ -12,7 +12,7 @@
             class="media-list-item-label"
             @click="copyToClipboardAndAppend('id_content', '{media ' + static_asset.hash_id + '}')"
             title="Append embed code to the post">
-            {media {{ static_asset.hash_id }}} <span>{{ static_asset.name }}</span>
+            <span>{{ static_asset.hash_id }}</span> {{ static_asset.name }}
         </div>
         <div class="btn-toolbar-row">
           <div class="btn btn-sm"
