Notifications: Fix container size

--- a/static/styles/_notifications.sass
+++ b/static/styles/_notifications.sass
@@ -11,7 +11,8 @@
     border: var(--border-width) solid var(--background-tertiary)
     border-radius: var(--border-radius-lg)
     box-shadow: var(--box-shadow-lg), var(--box-shadow-lg)
-    max-height: 90vh
+    min-height: 350px
+    max-height: 60vh
     max-width: 680px
     right: $spacer
     top: 4.5rem
