--- a/static/styles/_notifications.sass
+++ b/static/styles/_notifications.sass
@@ -1,6 +1,7 @@
 .notifications-container
   background-color: var(--notifications-background)
-  height: calc(100vh - var(--header-height) - var(--footer-height))
+  min-height: 300px
+  max-height: calc(100vh - var(--header-height) - var(--footer-height))
   position: fixed
   right: 0
   top: calc(-100vh + calc(var(--header-height) + var(--footer-height)))
