Cleanup: Use variable for font weight bold

--- a/static/styles/_comments.sass
+++ b/static/styles/_comments.sass
@@ -139,7 +139,7 @@
 .comment-author
   @extend %btn-text
   color: var(--text-secondary)
-  font-weight: bold
+  font-weight: var(--font-weight-bold)
 
 
 .comment-date
