--- a/static/styles/_notifications.sass
+++ b/static/styles/_notifications.sass
@@ -80,7 +80,7 @@
   a
     +padding(1, right)
     color: var(--text-primary)
-    font-weight: bold
+    font-weight: var(--font-weight-bold)
 
   span
     +padding(1, right)
@@ -117,7 +117,7 @@
     content: attr(data-notifications-count)
     display: none
     font-size: .7rem
-    font-weight: bold
+    font-weight: var(--font-weight-bold)
     justify-content: center
     left: 2.5rem
     min-width: 1.25rem
