Settings: add logout link

--- a/dillo/templates/dillo/account_edit_base.pug
+++ b/dillo/templates/dillo/account_edit_base.pug
@@ -53,6 +53,13 @@
 						i.i-settings
 						span Settings
 
+				a.btn.text-muted(
+					href="{% url 'logout' %}",
+				)
+					span
+						i.i-log-out
+						span Logout
+
 		.col-9
 			#nav-tabContent.tab-content
 				.tab-pane.fade.show.active
