--- a/dillo/templates/socialaccount/connections.pug
+++ b/dillo/templates/socialaccount/connections.pug
@@ -1,34 +1,49 @@
-| {% extends "dillo/base.pug" %}
+| {% extends "dillo/account_edit_base.pug" %}
 | {% load i18n %}
 | {% block head_title %}{% trans "Account Connections" %}{% endblock %}
-| {% block content %}
-h1 {% trans "Account Connections" %}
-| {% if form.accounts %}
-p
-  | {% blocktrans %}You can sign in to your account using any of the following third party accounts:{% endblocktrans %}
-form(method='post', action="{% url 'socialaccount_connections' %}")
-  | {% csrf_token %}
-  fieldset
-    | {% if form.non_field_errors %}
-    #errorMsg {{ form.non_field_errors }}
-    | {% endif %}
-    | {% for base_account in form.accounts %}
-    | {% with base_account.get_provider_account as account %}
-    div
-      label(for='id_account_{{ base_account.id }}')
-        input(id='id_account_{{ base_account.id }}', type='radio', name='account', value='{{ base_account.id }}')
-        span.socialaccount_provider(class='{{ base_account.provider }} {{ account.get_brand.id }}') {{account.get_brand.name}}
-        | {{ account }}
-    | {% endwith %}
-    | {% endfor %}
-    div
-      button(type='submit') {% trans 'Remove' %}
-| {% else %}
-p
-  | {% trans 'You currently have no social network accounts connected to this account.' %}
-| {% endif %}
-h2 {% trans 'Add a 3rd Party Account' %}
-ul.socialaccount_providers
-  | {% include "socialaccount/snippets/provider_list.html" with process="connect" %}
-| {% include "socialaccount/snippets/login_extra.html" %}
+
+| {% block content_account_edit_form %}
+.card-header
+  h1 {% trans "Account Connections" %}
+
+.card-body
+  | {% if form.accounts %}
+  p
+    | {% blocktrans %}You can sign in to your account using any of the following third party accounts:{% endblocktrans %}
+
+  form(method='post', action="{% url 'socialaccount_connections' %}")
+    | {% csrf_token %}
+    fieldset
+      | {% if form.non_field_errors %}
+      #errorMsg {{ form.non_field_errors }}
+      | {% endif %}
+
+      | {% for base_account in form.accounts %}
+      | {% with base_account.get_provider_account as account %}
+      div
+        .form-check
+          input.form-check-input(id='id_account_{{ base_account.id }}', type='radio', name='account', value='{{ base_account.id }}')
+          label.form-check-label(for="id_account_{{ base_account.id }}")
+            | {{account.get_brand.name}}
+      | {% endwith %}
+      | {% endfor %}
+
+      .btn-toolbar-row
+        button.btn-danger(type='submit')
+          span
+            i.i-trash
+            span {% trans 'Remove' %}
+  | {% else %}
+  p
+    | {% trans 'You currently have no social network accounts connected to this account.' %}
+  | {% endif %}
+
+  hr
+
+  h2 {% trans 'Connect a 3rd Party Account' %}
+
+  .socialaccount-providers
+    ul
+      | {% include "socialaccount/snippets/provider_list.pug" with process="connect" %}
+  | {% include "socialaccount/snippets/login_extra.html" %}
 | {% endblock %}
