Notifications: Fix styling

--- a/static/styles/_notifications.sass
+++ b/static/styles/_notifications.sass
@@ -109,12 +109,11 @@
     align-items: center
     background-color: var(--color-danger)
     border-radius: var(--border-radius)
-    box-shadow: 0 0 0 0.15rem var(--background-tertiary)
-    color: var(--text-tertiary)
+    color: var(--background-page)
     content: attr(data-notifications-count)
     display: none
     font-size: .7rem
-    font-weight: var(--font-weight-bold)
+    font-weight: 600
     justify-content: center
     left: 2.5rem
     min-width: 1.25rem
