--- a/static/styles/_notifications.sass
+++ b/static/styles/_notifications.sass
@@ -1,6 +1,9 @@
 .notifications-container
+  --notifications-min-height: 450px
+
   background-color: var(--notifications-background)
   max-height: calc(100vh - var(--header-height) - var(--footer-height))
+  min-height: var(--notifications-min-height)
   position: fixed
   right: 0
   top: calc(-100vh + calc(var(--header-height) + var(--footer-height)))
@@ -10,7 +13,6 @@
   +media-tablet
     border-radius: var(--border-radius-lg)
     box-shadow: var(--box-shadow-lg), var(--box-shadow-lg)
-    max-height: 60vh
     max-width: 680px
     right: $spacer
     top: 4.5rem
@@ -45,6 +47,7 @@
 
 .notifications-content
   max-height: 47vh
+  min-height: calc(var(--notifications-min-height) - 120px)
   overflow-y: auto
 
   > ul
