Comments: Fix popup position

--- a/static/styles/_comments.sass
+++ b/static/styles/_comments.sass
@@ -182,8 +182,10 @@
       margin-left: auto
 
   .dropdown-menu
-    // Don't know why BS doesn't detect the right width.
+    // Don't know why BS doesn't detect the right/bottom.
+    bottom: 2.5rem
     min-width: 15rem
+    top: initial
 
   .btn-toolbar-row
     @extend %btn-sm
