Notifications: fix positioning

--- a/static/styles/_notifications.sass
+++ b/static/styles/_notifications.sass
@@ -14,7 +14,8 @@
     border-radius: var(--border-radius-lg)
     box-shadow: var(--box-shadow-lg), var(--box-shadow-lg)
     max-width: 680px
-    right: $spacer
+    position: absolute
+    right: 4.5rem
     top: 4.5rem
     width: 45vw
 
