--- a/dillo/templates/account/login.pug
+++ b/dillo/templates/account/login.pug
@@ -23,7 +23,7 @@
 		.account-divider
 			span {% trans "OR" %}
 
-		form.login(method='POST', action="{% url 'account_login' %}")
+		form(method='POST', action="{% url 'account_login' %}")
 			| {% csrf_token %}
 			| {{ form | crispy }}
 
