Password Reset: Give a way to contact us when asking to contact us

--- a/dillo/templates/account/password_reset.pug
+++ b/dillo/templates/account/password_reset.pug
@@ -25,5 +25,5 @@ form.card.account(method='POST', action="{% url 'account_reset_password' %}")
 			span {% trans 'Reset My Password' %}
 
 	.card-footer
-		| {% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}
+		| {% blocktrans %}#[a(href="/about") Contact us] &nbsp;if you have any trouble resetting your password.{% endblocktrans %}
 | {% endblock %}
