--- a/dillo/templates/dillo/events/event_list.pug
+++ b/dillo/templates/dillo/events/event_list.pug
@@ -29,8 +29,8 @@
 						span.day {{ event.starts_at | date:"d" }}
 
 					.e-event-info
-						a(href="{% url 'event_detail' slug=event.slug %}")
-							h2 {{ event.name }}
+						a.e-event-title(href="{% url 'event_detail' slug=event.slug %}")
+							| {{ event.name }}
 
 						.location
 							| {% if event.is_online %}
@@ -59,10 +59,10 @@
 
 .sidebar-block
 	| {% if request.user.is_authenticated %}
-	a.btn.btn-primary.btn-sidebar(href="{% url 'event-create' %}")
+	a.btn.btn-theme-primary.btn-sidebar(href="{% url 'event-create' %}")
 		span {% trans "Submit Event" %}
 	| {% else %}
-	a.btn.btn-primary.btn-sidebar(href="{% url 'account_login' %}")
+	a.btn.btn-theme-primary.btn-sidebar(href="{% url 'account_login' %}")
 		span {% trans "Submit Event" %}
 	| {% endif %}
 
@@ -79,4 +79,4 @@
 
 | {% block site_footer %}{% endblock %}
 
-| {% block base_classes %}mt-2{% endblock base_classes %}
+| {% block base_classes %}events-list{% endblock base_classes %}
