Use regular button for share

--- a/dillo/templates/dillo/components/_button_share.pug
+++ b/dillo/templates/dillo/components/_button_share.pug
@@ -12,7 +12,7 @@ button.post-actions-btn(
 	span
 		i.i-share
 | {% else %}
-button.btn.btn-sidebar(
+button.btn.btn-block(
 	class="js-share",
 	title="{% trans 'Share' %}",
 	data-share-title="{% trans 'Share' %} {{ shared_object_label }} {% trans 'from' %} {{ site_name }}",
