--- a/dillo/templates/account/logout.pug
+++ b/dillo/templates/account/logout.pug
@@ -1,13 +1,22 @@
-| {% extends "dillo/base.pug" %}
+| {% extends "dillo/base_single_card.pug" %}
 | {% load i18n %}
+
 | {% block head_title %}{% trans "Sign Out" %}{% endblock %}
+
 | {% block content %}
-h1 {% trans "Sign Out" %}
-p {% trans 'Are you sure you want to sign out?' %}
-form(method='post', action="{% url 'account_logout' %}")
-  | {% csrf_token %}
-  | {% if redirect_field_value %}
-  input(type='hidden', name='{{ redirect_field_name }}', value='{{ redirect_field_value }}')
-  |   {% endif %}
-  button(type='submit') {% trans 'Sign Out' %}
+.card.account.login
+  .card-header
+    h1.card-title {% trans "Goodbye" %}
+  .card-body
+    p {% trans 'Are you sure you want to log out?' %}
+
+    form(method='post', action="{% url 'account_logout' %}")
+      | {% csrf_token %}
+      | {% if redirect_field_value %}
+      input(type='hidden', name='{{ redirect_field_name }}', value='{{ redirect_field_value }}')
+      |   {% endif %}
+
+      .card-cta
+        button.btn-primary(type='submit')
+          span {% trans 'Log Out' %}
 | {% endblock %}
