UI: Responsive tweak

--- a/static/styles/_notifications.sass
+++ b/static/styles/_notifications.sass
@@ -50,6 +50,7 @@
   max-height: 47vh
   min-height: calc(var(--notifications-min-height) - 120px)
   overflow-y: auto
+  -webkit-overflow-scrolling: touch
 
   > ul
     +list-unstyled
