Comments: Show user admin/moderator roles

--- a/static/styles/_comments.sass
+++ b/static/styles/_comments.sass
@@ -146,6 +146,9 @@
   color: var(--text-secondary)
   font-weight: var(--font-weight-bold)
 
+  .comment-username
+    +padding(1, right)
+
 
 .comment-date
   @extend %btn-text
