UI: Minor style fixes

--- a/static/styles/_comments.sass
+++ b/static/styles/_comments.sass
@@ -177,6 +177,10 @@
   blockquote
     box-shadow: inset 5px 0 0 0 var(--background-primary)
 
+  a.is-external
+    &[href*="discord"]
+      padding-left: 22px
+
 .comment-actions
   .btn-toolbar-row
     +margin(2, top)
