--- a/dillo/templates/dillo/profile_setup.pug
+++ b/dillo/templates/dillo/profile_setup.pug
@@ -31,7 +31,7 @@
 				| {% block profile_setup_form_extra %} {% endblock %}
 
 			.card-cta
-				button.btn.btn-primary.btn-next(type="submit")
+				button.btn-theme-primary.btn-next(type="submit")
 					span
 						span {% trans 'Next' %}
 						i.i-chevron-right
