Login: Highlight Sign In button

--- a/dillo/templates/account/login.pug
+++ b/dillo/templates/account/login.pug
@@ -35,7 +35,7 @@
 
 
 			.card-cta
-				button.btn.btn-primary.btn-block(type='submit')
+				button.btn-theme-primary(type='submit')
 					span {% trans "Sign In" %}
 
 	.card-footer
