Include super javascript extra

--- a/dillo/templates/dillo/account_notifications.pug
+++ b/dillo/templates/dillo/account_notifications.pug
@@ -23,6 +23,7 @@
 | {% endblock content_account_edit_form %}
 
 | {% block javascript_extra %}
+| {{ block.super }}
 script.
   let notificationFieldActions = ['like', 'follow', 'comment', 'reply']
   $('#id_is_enabled').on('change', function (event) {
